[project]
name = "commit0-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evaluate>=0.4.3",
    "pydantic>=2.9.2",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "transformers>=4.0.0",
]
