[project]
name = "commit0-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evaluate>=0.4.3",
    "pydantic>=2.9.2",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "transformers>=4.0.0",
    "altair>=5.4.1",
    "vl-convert-python>=1.6.1",
    "nltk>=3.9.1",
]
